View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030378 | Open CASCADE | OCCT:Data Exchange | public | 2018-11-16 09:53 | 2020-12-02 17:11 |
Reporter | abv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.6.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0030378: Data Exchange - extract of subset of model entities fails (regression) | ||||
Description | OCCT DE components contain tools allowing to extract subset of entities from the currently loaded model and write it to file. This functionality works in OCCT 6.0 and 6.5, but is broken since 6.0: access violation occurs in method Interface_BitMap::Init() due to use of uninitialized field theflags. In DRAW, this functionality is provided by commend writeent. | ||||
Steps To Reproduce | pload MODELING XSDRAW box b 10 10 10 stepwrite a b writeent $env(TEMP)/a.stp 3 | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR30378 has been created by abv. SHA-1: 155a96bc6466977dba59434a1e24ff49ce1acfe6 Detailed log of new commits: Author: abv Date: Sat Oct 3 07:03:51 2020 +0300 0030378: Data Exchange - extract of subset of model entities fails (regression) Field theflags in class Interface_BitMap is always initialized to avoid exception on operations with the class. Added test bugs step bug30378 |
|
Branch CR30378 has been updated forcibly by abv. SHA-1: 9c18a432e80a5aa71d369fec05a0c7f3560b2041 |
|
Patch is pushed to branch CR30378 and tested, see Jenkins job CR30378-abv; please review |
|
Branch CR30378 was reviewed |
|
Combination - OCCT branch : OCCT-750-BETA master SHA - 278da162dc52c26c8cfe9d002a6f07db12405194 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : OCCT-750-BETA SHA - d9c364e1137eed3249e5a05befa860c708f243c0 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18038.89000000012 / 18085.73000000008 [-0.26%] Products Total CPU difference: 12182.170000000115 / 12217.490000000116 [-0.29%] Windows-64-VC14: OCCT Total CPU difference: 19726.21875 / 19713.9375 [+0.06%] Products Total CPU difference: 13586.625 / 13579.390625 [+0.05%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30378 has been deleted by inv. SHA-1: 9c18a432e80a5aa71d369fec05a0c7f3560b2041 |
occt: master b81a7e31 2020-10-03 04:03:51 Committer: bugmaster Details Diff |
0030378: Data Exchange - extract of subset of model entities fails (regression) Field theflags in class Interface_BitMap is always initialized to avoid exception on operations with the class. Added test bugs step bug30378 |
Affected Issues 0030378 |
|
mod - src/Interface/Interface_BitMap.cxx | Diff File | ||
mod - src/Interface/Interface_BitMap.hxx | Diff File | ||
add - tests/bugs/step/bug30378 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-11-16 09:53 | abv | New Issue | |
2018-11-16 09:53 | abv | Assigned To | => gka |
2019-07-10 21:30 | abv | Target Version | 7.4.0 => 7.5.0 |
2020-10-03 07:00 | git | Note Added: 0095610 | |
2020-10-03 11:04 | git | Note Added: 0095615 | |
2020-10-03 15:53 | abv | Note Added: 0095700 | |
2020-10-03 15:53 | abv | Status | new => resolved |
2020-10-04 22:48 | gka | Note Added: 0095708 | |
2020-10-04 22:48 | gka | Assigned To | gka => bugmaster |
2020-10-04 22:48 | gka | Status | resolved => reviewed |
2020-10-06 22:45 | abv | Relationship added | duplicate of 0025280 |
2020-10-07 16:00 | bugmaster | Note Added: 0095786 | |
2020-10-07 16:00 | bugmaster | Status | reviewed => tested |
2020-10-07 16:16 | bugmaster | Test case number | => Not required |
2020-10-07 16:17 | bugmaster | Changeset attached | => occt master b81a7e31 |
2020-10-07 16:17 | bugmaster | Status | tested => verified |
2020-10-07 16:17 | bugmaster | Resolution | open => fixed |
2020-10-08 11:01 | git | Note Added: 0095802 | |
2020-12-02 16:22 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:11 | emo | Status | verified => closed |