0030378: Data Exchange - extract of subset of model entities fails (regression)

Field theflags in class Interface_BitMap is always initialized to avoid exception on operations with the class.

Added test bugs step bug30378